--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
     "eslint-plugin-prettier": "^3.1.1",
     "jest": "^24.9.0",
     "prettier": "1.19.1"
+  },
+  "scripts": {
+    "test-solution": "jest",
+    "test": "jest --config"
   }
 }
